tests/baselines/reference/parserES5SymbolIndexer2.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolIndexer2.ts(2,9): error TS1188: 'symbol' indexers are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolIndexer2.ts (1 errors) ====
    class C {
        [s: symbol]: string;
            ~~~~~~
!!! error TS1188: 'symbol' indexers are only available when targeting ECMAScript 6 and higher.
    }